--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -12,5 +12,8 @@
     padding: 0;
     height: 100vh;
     width: 100vw;
-    background-color: lightblue;
+    background-image: url("https://wallpapers.com/images/featured/v3m7o954avi0pm3f.jpg");
+    background-size: 100% 100%;
+    opacity: 0.75;
 }
+
