--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -14,6 +14,8 @@
     width: 100vw;
     background-image: url("https://wallpapers.com/images/featured/v3m7o954avi0pm3f.jpg");
     background-size: 100% 100%;
-    opacity: 0.75;
+    opacity: 0.7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
