--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -6,16 +6,55 @@
   justify-content: center;
 }
 
-.search {
-  width: 95%;
+.searchBox {
+  position: relative;
+  width: 100%;
   height: 11%;
+}
+
+.search {
+  position: absolute;
+  width: 88%;
+  height: 100%;
   border-radius: 1rem;
   font-size: x-large;
+  font-weight: lighter;
   color: rgb(56, 51, 51);
   padding-left: 4%;
+  padding-right: 8%;
   border: none;
   box-shadow: 6px 10px 8px rgba(128, 128, 128, 0.362);
 }
 .search:focus {
   outline: none;
+}
+
+@media all and (max-width: 800px) {
+  .container {
+    width: 85%;
+  }
+  .searchLogo {
+    left: 80%;
+  }
+}
+@media all and (max-width: 400px) {
+  .container {
+    width: 98%;
+  }
+  .searchLogo {
+    left: 80%;
+  }
+}
+.searchLogo {
+  position: absolute;
+  top: 25%;
+  left: 92%;
+  max-height: 50%;
+  max-width: 50%;
+  opacity: 0.5;
+}
+.searchLogo:hover {
+  cursor: pointer;
+  max-height: 52%;
+  max-width: 52%;
 }/*# sourceMappingURL=SearchBar.module.css.map */
