--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -4,14 +4,19 @@
 }
 
 .container {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper {
   margin: 0;
   padding: 0;
   height: 100vh;
   width: 100vw;
   background-image: url("https://wallpapers.com/images/featured/v3m7o954avi0pm3f.jpg");
   background-size: 100% 100%;
-  opacity: 0.7;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }/*# sourceMappingURL=Home.module.css.map */
