--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,14 +1,16 @@
 .container {
   margin-top: 7%;
   height: 70%;
-  width: 50%;
+  width: 65%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
 }
 
 .searchBox {
   position: relative;
-  width: 100%;
+  width: 85%;
   height: 11%;
 }
 
@@ -18,8 +20,8 @@
   height: 100%;
   border-radius: 1rem;
   font-size: x-large;
-  font-weight: lighter;
-  color: rgb(56, 51, 51);
+  font-weight: 100;
+  color: rgb(122, 115, 115);
   padding-left: 4%;
   padding-right: 8%;
   border: none;
@@ -28,23 +30,13 @@
 .search:focus {
   outline: none;
 }
+.search::-moz-placeholder {
+  font-weight: lighter;
+}
+.search::placeholder {
+  font-weight: lighter;
+}
 
-@media all and (max-width: 800px) {
-  .container {
-    width: 85%;
-  }
-  .searchLogo {
-    left: 80%;
-  }
-}
-@media all and (max-width: 400px) {
-  .container {
-    width: 98%;
-  }
-  .searchLogo {
-    left: 80%;
-  }
-}
 .searchLogo {
   position: absolute;
   top: 25%;
@@ -57,4 +49,80 @@
   cursor: pointer;
   max-height: 52%;
   max-width: 52%;
+}
+
+@media all and (max-width: 800px) {
+  .container {
+    width: 85%;
+  }
+  .search {
+    padding-right: 10%;
+  }
+  .searchLogo {
+    left: 92%;
+  }
+}
+@media all and (max-width: 400px) {
+  .container {
+    width: 100%;
+  }
+  .search {
+    padding-right: 10%;
+  }
+  .searchLogo {
+    left: 92%;
+  }
+}
+.suggestionWrapper {
+  width: 100%;
+  height: 87%;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.suggestion {
+  height: 88%;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.suggestion h3 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+}
+
+.photosFlex {
+  width: 100%;
+  height: 45%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1%;
+}
+
+.photo {
+  height: 100%;
+  width: 17.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.photo img {
+  min-width: 100%;
+  max-height: 85%;
+  min-height: 65%;
+  border-radius: 5px;
+}
+
+.popularSuggestions {
+  height: 25%;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-bottom: 5%;
 }/*# sourceMappingURL=SearchBar.module.css.map */
