--- a/src/pages/Result/Result.module.css
+++ b/src/pages/Result/Result.module.css
@@ -1,1 +1,78 @@
-/*# sourceMappingURL=Result.module.css.map */
+.container {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.results {
+  width: 100%;
+  height: 85%;
+  display: flex;
+}
+
+.navbar {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchBox {
+  position: relative;
+  width: 40%;
+  height: 37%;
+}
+
+.search {
+  position: absolute;
+  width: 88%;
+  height: 100%;
+  border-radius: 0.5rem;
+  font-size: x-large;
+  font-weight: 100;
+  color: rgb(122, 115, 115);
+  padding-left: 4%;
+  padding-right: 8%;
+  border: 0.5px solid gray;
+}
+.search:focus {
+  outline: none;
+}
+.search::-moz-placeholder {
+  font-weight: lighter;
+}
+.search::placeholder {
+  font-weight: lighter;
+}
+
+.searchLogo {
+  position: absolute;
+  top: 27%;
+  left: 92%;
+  max-height: 50%;
+  max-width: 50%;
+  opacity: 0.5;
+}
+.searchLogo:hover {
+  cursor: pointer;
+  max-height: 52%;
+  max-width: 52%;
+}
+
+@media all and (max-width: 800px) {
+  .searchBox {
+    width: 60%;
+  }
+}
+@media all and (max-width: 450px) {
+  .searchBox {
+    width: 80%;
+  }
+}
+@media all and (max-width: 350px) {
+  .searchBox {
+    width: 95%;
+  }
+}/*# sourceMappingURL=Result.module.css.map */
