--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,6 +1,134 @@
-.container{
+@mixin filterTitle() {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+}
+@mixin brandStyles () {
+    display: flex;
+    justify-content: baseline;
+    width: 50%;
+    margin-left: 5%;
+    input{
+        height: 1rem;
+        width: 1rem;
+        margin-right: 10%;
+
+        &:hover{
+            cursor: pointer;
+        }
+    }
+}
+@mixin setPerScreen($size, $width){
+    @media all and (max-width: $size){
+        .container{
+            width: $width;
+        }
+    }
+}
+
+
+.container {
     position: sticky;
     top: 0;
     height: 70%;
-    width: 20%;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    background-color: red;
 }
+
+.filters{
+    width: 100%;
+    height: 100%;
+    background-color: lightblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.brand {
+    @include filterTitle();
+}
+
+.price {
+    @include filterTitle();
+}
+
+.ratings{
+    @include filterTitle();
+}
+
+.brandList{
+    height: 15%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: -5%;
+}
+.brand1{
+    @include brandStyles();
+}
+
+.brand2{
+    @include brandStyles();
+}
+
+.priceList{
+    height: 15%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: -5%;
+}
+
+.price1{
+    @include brandStyles();
+}
+.price2{
+    @include brandStyles();
+}
+
+.ratingList{
+    height: 35%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: -5%;
+}
+
+.rating1{
+    @include brandStyles();
+    input{
+        margin-top: 3%;
+    }
+}
+.rating2{
+    @include brandStyles();
+    input{
+        margin-top: 3%;
+    }
+}
+.rating3{
+    @include brandStyles();
+    input{
+        margin-top: 3%;
+    }
+}
+.rating4{
+    @include brandStyles();
+    input{
+        margin-top: 3%;
+    }
+}
+.rating5{
+    @include brandStyles();
+    input{
+        margin-top: 3%;
+    }
+}
+
+@include setPerScreen(1000px, 45%);
+@include setPerScreen(500px, 100%);
