--- a/src/pages/Result/Result.module.scss
+++ b/src/pages/Result/Result.module.scss
@@ -3,6 +3,10 @@
     .searchBox{
         width: $searchSize;
     }
+    .results{
+        width: 100%;
+        flex-direction: column;
+    }
 }
 }
 
@@ -11,12 +15,14 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .results{
-    width: 100%;
+    width: 95%;
     height: 85%;
     display: flex;
+    background-color: red;
 }
 .navbar{
     width: 100%;
@@ -28,7 +34,7 @@
 
 .searchBox{
     position: relative;
-    width: 40%;
+    width: 35%;
     height: 37%;
 }
 
@@ -67,5 +73,5 @@
 }
 
 @include setPerScreen(800px, 60%);
-@include setPerScreen(450px, 80%);
+@include setPerScreen(500px, 80%);
 @include setPerScreen(350px, 95%);
