--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -8,11 +8,12 @@
     justify-content: baseline;
     width: 50%;
     margin-left: 5%;
+    margin-top: -7%;
     input{
         height: 1rem;
         width: 1rem;
         margin-right: 10%;
-
+        margin-top: 1%;
         &:hover{
             cursor: pointer;
         }
@@ -23,6 +24,7 @@
         .container{
             width: $width;
         }
+        
     }
 }
 
@@ -30,17 +32,15 @@
 .container {
     position: sticky;
     top: 0;
-    height: 70%;
+    height: 65%;
     width: 25%;
     display: flex;
     flex-direction: column;
-    background-color: red;
 }
 
 .filters{
     width: 100%;
     height: 100%;
-    background-color: lightblue;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -59,12 +59,12 @@
 }
 
 .brandList{
-    height: 15%;
+    height: 12%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-top: -5%;
+
 }
 .brand1{
     @include brandStyles();
@@ -75,12 +75,11 @@
 }
 
 .priceList{
-    height: 15%;
+    height: 12%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-top: -5%;
 }
 
 .price1{
@@ -91,43 +90,32 @@
 }
 
 .ratingList{
-    height: 35%;
     width: 100%;
+    height: 30%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-top: -5%;
 }
 
 .rating1{
     @include brandStyles();
-    input{
-        margin-top: 3%;
-    }
+    input{ margin-top: 3%;}
 }
 .rating2{
     @include brandStyles();
-    input{
-        margin-top: 3%;
-    }
+    input{ margin-top: 3%;}
 }
 .rating3{
     @include brandStyles();
-    input{
-        margin-top: 3%;
-    }
+    input{ margin-top: 3%;}
 }
 .rating4{
     @include brandStyles();
-    input{
-        margin-top: 3%;
-    }
+    input{ margin-top: 3%;}
 }
 .rating5{
     @include brandStyles();
-    input{
-        margin-top: 3%;
-    }
+    input{ margin-top: 3%;}
 }
 
 @include setPerScreen(1000px, 45%);
