--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,10 +1,11 @@
 .container {
-  position: sticky;
-  top: 0;
-  height: 65%;
-  width: 25%;
+  min-height: 100%;
+  min-width: 24%;
   display: flex;
   flex-direction: column;
+}
+.container h1 {
+  margin-bottom: 4%;
 }
 
 .filters {
