--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -30,12 +30,13 @@
 
 
 .container {
-    position: sticky;
-    top: 0;
-    height: 65%;
-    width: 25%;
+    min-height: 100%;
+    min-width: 24%;
     display: flex;
     flex-direction: column;
+    h1{
+        margin-bottom: 4%;
+    }
 }
 
 .filters{
