--- a/src/pages/Result/Result.module.css
+++ b/src/pages/Result/Result.module.css
@@ -1,3 +1,10 @@
+@media all and (max-width: 500px) {
+  .results {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .container {
   height: 100vh;
   width: 100vw;
@@ -8,7 +15,7 @@
 
 .results {
   width: 95%;
-  height: 85%;
+  height: 75%;
   display: flex;
 }
 
@@ -66,26 +73,14 @@
   .searchBox {
     width: 60%;
   }
-  .results {
-    width: 100%;
-    flex-direction: column;
-  }
 }
 @media all and (max-width: 500px) {
   .searchBox {
     width: 80%;
   }
-  .results {
-    width: 100%;
-    flex-direction: column;
-  }
 }
 @media all and (max-width: 350px) {
   .searchBox {
     width: 95%;
-  }
-  .results {
-    width: 100%;
-    flex-direction: column;
   }
 }/*# sourceMappingURL=Result.module.css.map */
