--- a/src/pages/Result/Result.module.scss
+++ b/src/pages/Result/Result.module.scss
@@ -3,11 +3,14 @@
     .searchBox{
         width: $searchSize;
     }
+}
+}
+@media all and (max-width: 500px){
     .results{
         width: 100%;
         flex-direction: column;
+        align-items: center;
     }
-}
 }
 
 .container{
@@ -20,7 +23,7 @@
 
 .results{
     width: 95%;
-    height: 85%;
+    height: 75%;
     display: flex;
 }
 .navbar{
