--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,5 +1,5 @@
 .container {
-  min-height: 100%;
+  height: 80%;
   min-width: 24%;
   display: flex;
   flex-direction: column;
@@ -229,10 +229,12 @@
 @media all and (max-width: 1000px) {
   .container {
     width: 45%;
+    min-height: 100%;
   }
 }
 @media all and (max-width: 500px) {
   .container {
     width: 100%;
+    min-height: 100%;
   }
 }/*# sourceMappingURL=Sidebar.module.css.map */
