--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -23,6 +23,7 @@
     @media all and (max-width: $size){
         .container{
             width: $width;
+            min-height: 100%;
         }
         
     }
@@ -30,7 +31,7 @@
 
 
 .container {
-    min-height: 100%;
+    height: 80%;
     min-width: 24%;
     display: flex;
     flex-direction: column;
