--- a/src/components/ProductsGrid/ProductsGrid.module.css
+++ b/src/components/ProductsGrid/ProductsGrid.module.css
@@ -12,6 +12,7 @@
 }
 
 .product {
+  position: relative;
   height: 20rem;
   width: 12rem;
   display: flex;
@@ -23,4 +24,12 @@
   max-height: 75%;
   min-width: 100%;
   border-radius: 3px;
+}
+.product h2 {
+  position: absolute;
+  margin-left: 80%;
+  margin-top: -135%;
+}
+.product h2:hover {
+  cursor: pointer;
 }/*# sourceMappingURL=ProductsGrid.module.css.map */
