--- a/src/components/ProductsGrid/ProductsGrid.module.scss
+++ b/src/components/ProductsGrid/ProductsGrid.module.scss
@@ -1,14 +1,3 @@
-// @media all and (max-width: 1000px) {
-//     .container{
-//         background-color: red;
-//         display: grid;
-//         grid-template-columns: repeat(3, 1fr);
-//     }
-// }
-
-
-
-
 .container{
     height: fit-content;
     width: 75%;
@@ -22,6 +11,7 @@
 }
 
 .product{
+    position: relative;
     height: 20rem;
     width: 12rem;
     display: flex;
@@ -32,5 +22,13 @@
         max-height: 75%;
         min-width: 100%;
         border-radius: 3px;
+    }
+    h2{
+        position: absolute;
+        margin-left: 80%;
+        margin-top: -135%;
+        &:hover{
+            cursor: pointer;
+        }
     }
 }
