--- a/src/components/ProductsGrid/ProductsGrid.module.css
+++ b/src/components/ProductsGrid/ProductsGrid.module.css
@@ -20,6 +20,9 @@
   justify-content: space-around;
   margin-bottom: 5px;
 }
+.product:hover .view {
+  visibility: visible;
+}
 .product img {
   max-height: 75%;
   min-width: 100%;
@@ -32,4 +35,18 @@
 }
 .product h2:hover {
   cursor: pointer;
+}
+
+.view {
+  visibility: hidden;
+  position: absolute;
+  height: 12%;
+  width: 100%;
+  background-color: rgba(68, 68, 203, 0.664);
+  top: 64%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Times New Roman", Times, serif;
 }/*# sourceMappingURL=ProductsGrid.module.css.map */
