--- a/src/components/ProductsGrid/ProductsGrid.module.scss
+++ b/src/components/ProductsGrid/ProductsGrid.module.scss
@@ -18,6 +18,11 @@
     flex-direction: column;
     justify-content: space-around;
     margin-bottom: 5px;
+    &:hover{
+        .view{
+            visibility: visible;
+        }
+    }
     img{
         max-height: 75%;
         min-width: 100%;
@@ -33,3 +38,16 @@
     }
 }
 
+.view{
+    visibility: hidden;
+    position: absolute;
+    height: 12%;
+    width: 100%;
+    background-color: rgba(68, 68, 203, 0.664);
+    top: 64%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family:'Times New Roman', Times, serif;
+}
