added products api

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -7,6 +7,12 @@
 .container h1 {
   margin-bottom: 4%;
 }
+.container hr {
+  width: 65%;
+  background-color: rgb(173, 168, 168);
+  border-width: 0.5px;
+  margin-left: 3%;
+}
 
 .filters {
   width: 100%;
