--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -38,6 +38,12 @@
     h1{
         margin-bottom: 4%;
     }
+    hr{
+        width: 65%;
+        background-color: rgb(173, 168, 168);
+        border-width: 0.5px;
+        margin-left: 3%;
+    }
 }
 
 .filters{
