--- a/src/components/ProductsGrid/ProductsGrid.module.css
+++ b/src/components/ProductsGrid/ProductsGrid.module.css
@@ -24,8 +24,7 @@
   visibility: visible;
 }
 .product img {
-  max-height: 75%;
-  min-width: 100%;
+  height: 70%;
   border-radius: 3px;
 }
 .product h2 {
