--- a/src/components/ProductsGrid/ProductsGrid.module.scss
+++ b/src/components/ProductsGrid/ProductsGrid.module.scss
@@ -24,8 +24,7 @@
         }
     }
     img{
-        max-height: 75%;
-        min-width: 100%;
+        height: 70%;
         border-radius: 3px;
     }
     h2{
