--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -112,16 +112,14 @@
 }
 
 .photo {
-  height: 100%;
+  height: 80%;
   width: 17.5%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 .photo img {
-  min-width: 100%;
-  max-height: 85%;
-  min-height: 65%;
+  min-height: 90%;
   border-radius: 5px;
 }
 
@@ -132,4 +130,7 @@
   flex-direction: column;
   justify-content: space-around;
   margin-bottom: 5%;
+}
+.popularSuggestions p:hover {
+  cursor: pointer;
 }/*# sourceMappingURL=SearchBar.module.css.map */
