--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -106,15 +106,13 @@
 }
 
 .photo{
-    height: 100%;
+    height: 80%;
     width: 17.5%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     img{
-        min-width: 100%;
-        max-height: 85%;
-        min-height: 65%;
+        min-height: 90%;
         border-radius: 5px;
     }
 }
@@ -126,4 +124,9 @@
     flex-direction: column;
     justify-content:space-around;
     margin-bottom: 5%;
+    p{
+        &:hover{
+            cursor: pointer;
+        }
+    }
 }
